# minuit_cosfitter

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  README.md  configure  configure.in  libtool
src/: Makefile.am  auxconstraint.cc  auxconstraint.h  chifunc.cc  chifunc.h  cosfitter-twoscriptm.cc  cosfitter.cc  covmatrix.cc  covmatrix.h  lumdist.cc  simple_matrix.h  snedata.cc  snedata.h  try.cc  utility.cc  utility.h
